# naanj

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: build_ui.yml  update_naans.yml
data/: naanj.json
js/: main.212e4d2263449eeee721.bundle.js  main.775eb60adca5d9ed2379.bundle.js  main.928851daf04c87c0c682.bundle.js  main.a5b4029ca586d252c6d0.bundle.js  runtime.006da3f48c116cfdd429.bundle.js
naanj/: __init__.py  anvl.py  main.py
notes/: test_https.ipynb
styles/: main.cd57c5b538104f31b256.css  main.da8759ca32c0d628105b.css  main.e41e2c4cb41b7a2e04f7.css
web/: README.md  package-lock.json  package.json
web/config/: webpack.common.js  webpack.dev.js  webpack.prod.js
web/src/: index.js  template.html
web/src/js/: load_data.js
web/src/styles/: _scaffolding.scss  _variables.scss  index.scss
