[tool.poetry]
name = "naanj"
version = "0.2.0"
description = "Translating NAAN registry to JSON"
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
dateparser = "^1.0.0"
aiohttp = "^3.7.4"
click = "^7.1.2"
certifi = "^2020.12.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
naanj = "naanj.main:main"
